@@ -7,6 +7,9 @@
 *.obj
 *.elf
 
+# Debug objects
+*.dbg
+
 # Linker output
 *.ilk
 *.map
