@@ -14,6 +14,17 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/).
 ### Changed
 - Executable files and test.c in gitignore
 
+---
+
+## [main] 2024-11-17
+
+### Added
+- .dbg files in gitignore
+
+### Changed
+- Makefile linker fixed
+
+---
 ## [toby] 2024-11-17
 
 ### Added
